--- a/404.html
+++ b/404.html
@@ -3,65 +3,96 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Railin'</title>
-    <script src="https://kit.fontawesome.com/11fe60c87a.js" crossorigin="anonymous"></script>
-    <meta property="og:image" content="https://railingames.github.io/imgs/banner.png"/>
-    <meta name="twitter:card" content="summary_large_image"> 
-    <meta property="og:title" content="Railin"/>
-    <meta property="og:description" content="Best game site on the block 😎"/>
+    <title>404 - Page Not Found | Railin'</title>
+    <meta property="og:title" content="404 - Railin'"/>
+    <meta property="og:description" content="Page not found"/>
+    <meta property="og:image" content="./Assests/Imgs/banner.png"/>
+    <meta name="twitter:card" content="summary_large_image">
+    
     <link rel="icon" type="image/png" href="./Assests/Imgs/Logo.png">
-    <link rel="stylesheet" type="text/css" href="./Assests/CSS/main.css">
-    <link rel="stylesheet" type="text/css" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
-    <link rel="stylesheet" href="./css/bg.css">
+    <link rel="stylesheet" href="./Assests/CSS/main.css">
+    <link rel="stylesheet" href="./Assests/CSS/bg.css">
+    <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
+    
     <style>
         body {
             padding: 0;
             margin: 0;
             overflow: hidden;
-            background: #111;
-            color: white;
-            font-family: Calibri, 'Trebuchet MS', sans-serif;
+            background: var(--bg-color);
+            color: var(--text-color1);
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
         .error-container {
             display: flex;
             justify-content: center;
             align-items: center;
-            color: var(--text-color1);
             height: 100vh;
             flex-direction: column;
             animation: zoom-in-fade 1s cubic-bezier(0.34, 1.56, 0.64, 1);
+            text-align: center;
+            padding: 1rem;
         }
         .error-heading {
-            font-size: 100px;
-            text-align: center;
-            color: white;
+            font-size: 8rem;
+            margin: 0;
+            color: var(--text-color1);
+            text-shadow: 0 0 10px var(--shadow-color);
+        }
+        .error-message {
+            font-size: 1.5rem;
+            margin: 1rem 0;
+            color: var(--text-color2);
         }
         .error-link {
             color: var(--text-color1);
-            text-decoration: underline;
+            text-decoration: none;
+            padding: 0.5rem 1rem;
+            margin: 0.5rem;
+            border-radius: 5px;
+            background: var(--btn-accent);
+            transition: transform 0.3s ease;
+            display: inline-block;
+        }
+        .error-link:hover {
+            transform: scale(1.1);
+        }
+        @keyframes zoom-in-fade {
+            from {
+                opacity: 0;
+                transform: scale(0.9);
+            }
+            to {
+                opacity: 1;
+                transform: scale(1);
+            }
         }
     </style>
 </head>
-<body class="default" onload="pageLoad()">
+<body class="default">
     <div class="error-container">
         <h1 class="error-heading">404</h1>
-        <a class="error-link" href="https://github.com/RailinGames/RailinGames.github.io/issues">
-            <p>Report Problem</p>
-        </a>
-        <a class="error-link" href="./">
-            <p>Home</p>
-        </a>
+        <p class="error-message">Oops! Page not found</p>
+        <div>
+            <a class="error-link" href="https://github.com/Scaroontop/Railin/issues">
+                Report Problem
+            </a>
+            <a class="error-link" href="./">
+                Return Home
+            </a>
+        </div>
     </div>
 
     <div id="particles-js"></div>
 
-    <script src="./js/main.js"></script>
-    <script src="./js/bg.js"></script>
+    <script src="./Assests/JS/bg.js"></script>
+    <script src="./Assests/JS/options.js"></script>
     <script>
-        particlesJS.load('particles-js', './json/particles.json', function() {
-            console.log('callback - particles.js config loaded');
+        document.addEventListener('DOMContentLoaded', function() {
+            particlesJS.load('particles-js', './Assests/json/particles.json', function() {
+                console.log('Particles.js initialized successfully');
+            });
         });
     </script>
-    <script src="./Assests/JS/options.js"></script>
 </body>
 </html>
